# tg-daemon

./: Cargo.toml  commands.txt  license  readme.md  test_program.fish  todo.txt
examples/: commands.txt  example.fish  example.sh  file.txt  mc_server_status.sh  multiple_commands.sh
src/: main.rs  telegram_api.rs
