[package]
name = "daemon_telegram"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.1.8", features = [ "derive", "wrap_help" ] }
derive-enum-from-into = "0.1.1"
mime = "0.3.16"
nanoid = "0.4.0"
reqwest = { version = "0.11.14", features = [ "json", "multipart" ] }
serde = { version = "1.0.152", features = [ "derive" ] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = [ "rt-multi-thread", "net", "fs", "io-std", "process", "macros", "sync" ] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
